Add cachebusters to CSS and JS

--- a/support/web/template.html
+++ b/support/web/template.html
@@ -7,7 +7,7 @@
 
   <title>$pagetitle$ - 1Lab</title>
 
-  <link rel="stylesheet" href="/css/default.css" />
+  <link rel="stylesheet" href="/css/default.css?v=$cssDigest$" />
   <link rel="stylesheet" href="/css/katex.min.css" />
 
   <meta name="twitter:card" content="summary" />
@@ -29,7 +29,7 @@
   <meta name="description" content="A formalised, explorable online resource for Homotopy Type Theory." />
   $endif$
 
-  <script defer src="/main.js"></script>
+  <script defer src="/main.js?v=$jsDigest$"></script>
 
   <noscript>
     <style>
